240521 [style] : style update

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,16 @@
 */
 
 :root {
+    background-color: aquamarine;
     --button-color: #ffffff;
     --button-bg-color: #5698fc;
     --button-hover-bg-color: #3676dd;
+}
+#root {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
 }
 
 html,
