--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,17 @@
     padding: 2rem;
     text-align: center;
 }
+a {
+    color: #fff;
+    text-decoration: none;
+    outline: none;
+}
+
+a:hover,
+a:active {
+    text-decoration: none;
+    color: #fff;
+}
 
 html,
 body,
